--- a/templates/email.html
+++ b/templates/email.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <base target="_top">
-  </head>
-  <body>
-    <p>Dear </p>
-    <p>Thanks for your interest, we'll get back to you shortly.</p>
-    <p>Kind Regards,<br>Web App</p>
-  
-  </body>
+{% extends 'base.html' %}
+{% block title %}
+  Email
+{% endblock %}
+{% block content %}
+    <p>Thanks for your interest. If you have any comment or want to connect/colaborate, please contact with me via email</p>
+    <p>diamond.dai@gmail.com</p>
+    
+{% endblock %}
 </html>
