update bootstrap version and using google font

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,18 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}
-  About
+  About Me
 {% endblock %}
   
 {% block content %}
     <div class="container">
-
+      <p>Curiosity creates possibility and change, and also ignites my passion for coding.</p>
+      <p>Hi, I am Diamond, a software developer</p>
+      <p>My journey began in physics and engineering, where I sought to understand how the world works and find ways to improve lives through technology. Over time, a serious health issue prompted a career change towards coding. I started self-learning coding in VBA. I built my first, simple program which automatically processes boring routine copy and paste tasks. I was struck by the power of software to automate manual tasks and liberate human potential.</p>         
+      <p>As a software developer in the past few years, I take great joy in exploring new languages, frameworks and technologies to expand my skills. My natural curiosity also drives me to always be seeking the newest innovations and evaluating how they could solve real problems. I also enjoy collaborating with cross-functional teams to bring projects to life.</p>
     </div> <!-- CLOSE CONTAINER -->
   
    <div class="container">
      <div class="row">
        <div class="input-field col s4">
          <div id="chipAbout" class="chips">
-          This is contact detail
+          
          </div>
        </div>
      </div> <!-- CLOSE ROW -->
