--- a/static/css/home.css
+++ b/static/css/home.css
@@ -6,31 +6,111 @@
     display:none;          
     }
 
-  #diamondImg {
+  #diamondImg {    
     display:none;
-    height: 50px;
-    width:50px;
   }
 
-  .middleAlign {
-    width:100%;
+  .top_block{
+    display:flex;
+    flex-direction: column;
+    height:20%;
+  }
+
+  .top_cell{
+    flex:1;
     display: flex;
+    flex-direction: row;
+    align-self: center;
     justify-content: center;
-    align-items: center;
   }
 
+  .top_cell p{
+    font-size:4vw;
+    font-weight: bold;
+    color:darkslateblue;
+  }
+
+
+/* 
   .container {
     align-self: center;
     height: 100%;
     display: block;
     justify-content: center;
     align-items: center;
-  }
-/* 
-  div {
-    align-content: center;
-  }
-
-  img {
-    align-content: center;
   } */
+
+  /* Google font Ro classes */
+
+  .roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .roboto-light {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .roboto-medium {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .roboto-black {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .roboto-thin-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .roboto-light-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .roboto-regular-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .roboto-medium-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .roboto-black-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+  
