--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,9 +3,9 @@
   Email
 {% endblock %}
 {% block content %}
-    <p>Thanks for your interest. If you have any comment or want to connect/colaborate, please contact me</p>
+  <div class="container">
+    <p>Thanks for your interest. </p>
+    <p>If you have any comment or want to connect/colaborate, please contact me</p>
     <p>Email: diamond.dai@gmail.com</p>
-    <p>LinkedIn: www.linkedin.com/in/diamond-dai-6899352a7</p>
-    
+    <p>LinkedIn: www.linkedin.com/in/diamond-dai-6899352a7</p>  </div>    
 {% endblock %}
-</html>
