--- a/static/css/about.css
+++ b/static/css/about.css
@@ -2,4 +2,9 @@ p {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: normal;
+    font-size: 18px;
   }
+
+#self_intro p {
+  font-size: 18px;
+}
