--- a/templates/home.html
+++ b/templates/home.html
@@ -13,9 +13,9 @@ Home page
         <div class = 'row'>
             <div clas='col-md-12'>
                 <div class="container">
-                    <div class="top_cell roboto-bold"><p id="head1">Hi, I'm Diamond Dai</p></div>
-                    <div class="top_cell"><img id="diamondImg" src="{{ url_for('static', filename='images/diamond2.png')}}"></div>
-                    <div class="top_cell roboto-bold"><p id="head3">A Software Developer</p></div>              
+                    <div class="top_cell roboto-bold"><h2 id="head1">Hi, I'm Diamond Dai</h2></div>
+                    <div class="top_cell"><img id="diamondImg" src="{{ url_for('static', filename='images/diamond4.png')}}"></div>
+                    <div class="top_cell roboto-bold"><h2 id="head3">A Software Developer</h2></div>              
                 </div>
             </div>
         </div>
@@ -31,18 +31,35 @@ Home page
                 </div>
             </div>
         </div>
-        <div class='jumbotron' id='jumbotronCoding'>
+        <div class='jumbotron' id='jumbotronCLI'>
             <div class="container">
                 <div class="row">
                     <div clas='col-md-12'>
-                        <h2 class="display-4">Coding is not just tech, \n But art work</h2>
-                        <a class="btn btn-primary btn-lg">Learn Now</a>
+                        <h2 class="display-4">CLI Sailing Journey</h2>
+                        <a class="btn btn-primary btn-lg" href="https://medium.com/@diamond.dai/cli-fundamental-commands-a-sailing-journey-f0ea823b43f9">Learn More</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-
+        <div class='jumbotron' id='jumbotronArtWork'>
+            <div class="container">
+                <div class="row">
+                    <div clas='col-md-12'>
+                        <h2 class="display-4">GCoding is more than a tech</h2>
+                        <a class="btn btn-primary btn-lg">Know More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class='jumbotron' id='jumbotronParenting'>
+            <div class="container">
+                <div class="row">
+                    <div clas='col-md-12'>
+                        <h2 class="display-4">Parenting</h2>
+                        <a class="btn btn-primary btn-lg">Know More</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
             
