--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/about">About Me</a>
+                <a class="nav-link active" aria-current="page" href="/about">My journey</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact</a>
@@ -32,7 +32,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="/quiz">OX Quiz Challenge</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">New Project Development</a></li>
                 </ul>
               </li>
               <li class="nav-item">
